--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="projects-grid">
                 <div class="project-card" data-category="residential">
-                    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=400&h=300&fit=crop" alt="Modern Villa">
+                    <img src="Assests/Modern Villa.jpg" alt="Modern Villa">
                     <div class="project-overlay">
                         <h3>Modern Villa</h3>
                         <p>Luxury residential design</p>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="project-card" data-category="commercial">
-                    <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?w=400&h=300&fit=crop" alt="Office Complex">
+                    <img src="Assests/Office Complex.jpg" alt="Office Complex">
                     <div class="project-overlay">
                         <h3>Office Complex</h3>
                         <p>Corporate headquarters</p>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="project-card" data-category="residential">
-                    <img src="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?w=400&h=300&fit=crop" alt="Contemporary Home">
+                    <img src="Assests/Contemporary Home.avif" alt="Contemporary Home">
                     <div class="project-overlay">
                         <h3>Contemporary Home</h3>
                         <p>Minimalist design</p>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="project-card" data-category="industrial">
-                    <img src="https://images.unsplash.com/photo-1582389804308-8d4d84eeb6e4?w=400&h=300&fit=crop" alt="Industrial Facility">
+                    <img src="Assests/Industrial Facility.webp" alt="Industrial Facility">
                     <div class="project-overlay">
                         <h3>Industrial Facility</h3>
                         <p>Manufacturing plant</p>
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <div class="project-card" data-category="commercial">
-                    <img src="https://images.unsplash.com/photo-1551836022-deb4988cc6c0?w=400&h=300&fit=crop" alt="Shopping Center">
+                    <img src="Assests/Shopping Center.jpg" alt="Shopping Center">
                     <div class="project-overlay">
                         <h3>Shopping Center</h3>
                         <p>Retail complex</p>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="project-card" data-category="residential">
-                    <img src="https://images.unsplash.com/photo-1613977257363-707ba9348227?w=400&h=300&fit=crop" alt="Eco Home">
+                    <img src="Assests/Eco Home.jpg" alt="Eco Home">
                     <div class="project-overlay">
                         <h3>Eco Home</h3>
                         <p>Sustainable living</p>
@@ -287,9 +287,9 @@
                 <div class="footer-section">
                     <h3>Contact Info</h3>
                     <div class="contact-info">
-                        <p><i class="fas fa-map-marker-alt"></i> 123 Construction Ave, City, State 12345</p>
-                        <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
-                        <p><i class="fas fa-envelope"></i> info@buildforge.com</p>
+                        <p><i class="fas fa-map-marker-alt"></i>  7 Independence Ave, Colombo 00700</p>
+                        <p><i class="fas fa-phone"></i> +94 77 971 8104</p>
+                        <p><i class="fas fa-envelope"></i> d.sethnadagamage@gmail.com </p>
                     </div>
                 </div>
             </div>
